Make sure text input onchange handler is called before onblur. b=357684 r=Olli.Pettay sr=bzbarsky